feat: adds kafka
